Junit tests for InvoiceDoc & ExternalStorage